# eval-agents

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
.../: average_order_value_per_month.xlsx  average_spend_report.xlsx  average_spending_report.xlsx  highest_value_customers_report.xlsx  monthly_sales_performance_report.xlsx  sales_revenue_by_country_per_year.xlsx
.github/workflows/: code_checks.yml
aieng-eval-agents/: README.md  pyproject.toml
aieng-eval-agents/aieng/agent_evals/: configs.py
aieng-eval-agents/aieng/agent_evals/evaluation/graders/: _utils.py  trace_groundedness.py
aieng-eval-agents/aieng/agent_evals/misalignment_qa/: __init__.py  agent.py  analysis.py  config_types.py  experiment.py  preparation.py  task.py
aieng-eval-agents/aieng/agent_evals/misalignment_qa/evaluation/: __init__.py  hard_metrics.py
aieng-eval-agents/aieng/agent_evals/report_generation/evaluation/: offline.py
aieng-eval-agents/tests/aieng/agent_evals/misalignment_qa/: test_agent.py
aieng-eval-agents/tests/aieng/agent_evals/report_generation/evaluation/: test_offline.py
implementations/: __init__.py
implementations/misalignment_qa/: 01_interactive_single_run.ipynb  02_inspect_results.ipynb  README.md  evaluate.py  run.py
implementations/misalignment_qa/configs/: bootcamp_misalignment.yaml
implementations/report_generation/: 01_Importing_the_Dataset.ipynb  02_Running_The_Agent.ipynb  03_Running_Offline_Evaluations.ipynb  plan.md
