[project]
name = "aieng-eval-agents"
version = "0.3.1"
description = "Agentic AI Evaluation reference implementation from Vector Institute AI Engineering"
authors = [{name = "Vector AI Engineering", email = "ai_engineering@vectorinstitute.ai"}]
requires-python = ">=3.12,<4.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "google-adk>=1.28.1", # CVE-2026-4810: code injection and missing authentication fixed in 1.28.1
    "google-genai>=1.52.0",
    "gradio>=6.7.0", # CVE-2026-28414/27167/28416/28415 fixed in 6.6.0–6.7.0
    "kagglehub>=0.4.1",
    "langfuse>=3.10.3,<4.0.0",
    "openai>=2.8.1",
    "openai-agents>=0.6.1",
    "openinference-instrumentation-google-adk>=0.1.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "pandas>=2.3.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "rich>=13.9.0",
    "sqlalchemy>=2.0.46",
    "sqlglot>=28.6.0",
    "weaviate-client>=4.18.3",
    "pypdf>=6.10.2", # CVE-2026-28804: ASCIIHexDecode DoS fixed in 6.7.5; GHSA-jj6c-8h6c-hppx/GHSA-4pxv-j86v-mhcw/GHSA-7gw9-cf7v-778f/GHSA-x284-j5p8-9c5p: DoS via crafted PDFs fixed in 6.10.2
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
    "html-to-markdown>=2.24.0,<3.0.0",
]

[project.scripts]
knowledge-qa = "aieng.agent_evals.knowledge_qa.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["aieng/"]

[tool.hatch.build.targets.wheel]
include = ["aieng/"]
